# psxify

./: .gitignore  README.md  flake.nix  pyproject.toml
src/: psxify.py
