[tool.poetry]
name = "psxify"
version = "2025.3.29"
description = "A simple script to turn any image file into a PS1 texture."
authors = [
    {name = "siggnal460", email = "siggnal@proton.me" }
]
requires-python = ">=3.9"

[tool.poetry.dependencies]
pillow = "11.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
